# rssticker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: lint.yml  validate.yml
custom_components/rssticker/: __init__.py  config_flow.py  const.py  coordinator.py  helpers.py  icons.json  manifest.json  sensor.py  services.py  services.yaml  strings.json
custom_components/rssticker/translations/: es.json
custom_components/rssticker/www/: rssticker-card.js
tests/: test_helpers.py
